assignments/pa3/testsuite/cgen/out/override-basic.cl.spim.err
spim: (parser) syntax error on line 241 of file /home/raj/cool/distro/assignments/pa3/testsuite/cgen/out/override-basic.cl.out
	  .word	-1
	  ^
Instruction references undefined symbol at 0x0040129c
